--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -35,7 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.23.2",
     "sequelize-typescript": "^2.1.3",
-    "tsc": "^2.0.4"
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
@@ -52,7 +52,6 @@
     "eslint-config-google": "^0.14.0",
     "mocha": "^6.1.4",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "^4.8.4"
+    "ts-node-dev": "^1.0.0-pre.32"
   }
 }
