--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -35,7 +35,8 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.23.2",
     "sequelize-typescript": "^2.1.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
@@ -43,7 +44,7 @@
     "@types/express": "^4.16.1",
     "@types/node": "^11.15.54",
     "@types/sequelize": "^4.28.14",
-    "@types/validator": "^10.9.0",
+    "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "chai": "^4.2.0",
